@@ -35,6 +35,7 @@ struct _dns_message {
     unsigned int qr:1;
     unsigned int rd:1;		/* set if RECUSION DESIRED bit is set */
     unsigned int aa:1;		/* set if AUTHORITATIVE ANSWER bit is set */
+    unsigned int tc:1;		/* set if TRUNCATED RESPONSE bit is set */
     struct {
 	unsigned int found:1;	/* set if we found an OPT RR */
 	unsigned int DO:1;	/* set if DNSSEC DO bit is set */
