@@ -1,0 +1,2 @@
+int tc_bit_indexer(const void *);
+int tc_bit_iterator(char **label);
